# wvw-skirmish-analysis

./: README.md  match_skirmish_data_2887.json  pyproject.toml  skirmish_analysis.py
World vs. World Per Match JSON Files/: match_skirmish_data_1330.json
lookup_tables/: events.json  maps.json  skirmish_vp.json
